...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Pc0-PU-9Nm">
                                <rect key="frame" x="20" y="123.5" width="335" height="150"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="textView"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="150" id="Tta-br-bY8"/>
                                </constraints>
                                <string key="text">3,4,1,2,8,6
6,1,8,2,7,4
5,9,3,9,9,5
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="335" translatesAutoresizingMaskIntoConstraints="NO" id="H58-9H-6wa">
                                <rect key="frame" x="20" y="373.5" width="335" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="pathThroughLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="335" translatesAutoresizingMaskIntoConstraints="NO" id="VxB-MT-jAg">
                                <rect key="frame" x="20" y="383.5" width="335" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="totalCostLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="335" translatesAutoresizingMaskIntoConstraints="NO" id="0lE-aQ-UJZ">
                                <rect key="frame" x="20" y="393.5" width="335" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="pathSequenceLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z97-nV-kt4">
                                <rect key="frame" x="77.5" y="281.5" width="220" height="42"/>
...
                                            <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ALq-Uy-vcs"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uiu-8e-E4M">
                                        <rect key="frame" x="0.0" y="12" width="100" height="30"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="findleastCostButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="3K3-Mk-KCe"/>
                                            <constraint firstAttribute="height" constant="30" id="tah-5G-6B8"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                        <state key="normal" title="Find Path">
...
